comment accepts now "umlaute"